V0.9.8
---------
 * Consider QML anchoring, because of which, some widgets can't have frame expansion, tiling pattern or even interior gradient.
 * No interior and frame expansion when the label of a group box is drawn on its top frame.
 * Added support for expanded frame sizes.

V0.9.7
---------
 * Deal with QML peculiarities.
 * Added support for separate checkboxes and radiobuttons on menus.
 * Fall back to the normal state if an object for another state isn't found.
 * Draw the focus frame around widgets with keyboard focus if it's enabled in the theme (it's disabled in the default theme).
 * Added a key for disabling pushbutton contents shift.
 * Simplified the logic for tab separators and removed "joined_active_tab".
 * Added a hacking key for merging PCManFM-Qt's folder-view with its surroundings (to Kvantum Manager).
 * Added a dark version of KvSimplicity (KvSimplicityDark).

V0.9.6
---------
 * Added support for default button interior.
 * Show menu titles in the toggled and not pressed state.
 * Added an option for putting the group-box label above the frame.
 * Removed scrollbar add-line and sub-line frame and interior.
 * Add a key to join the active tab to its (inactive) adjacent tab(s). Also added support for tab separators.
 * Added a key for drawing spin indicators inside the spin line-edit.
 * When toobar buttons are grouped and one of the buttons is shown or hidden, update the toolbar.
 * Corrections to the states of toolbuttons with menu arrow.
 * Corrected blurring with HDPI because the HDPI tranlucency bug is fixed in Qt-5.6. Also tried to correct icon sizes for odd DPRs.
 * Set tab horizontal and vertical spaces according to tab frame thickness (which results in an appropriate space between close button and right frame).
 * Added an experimental hacking key for setting the icon size of LXQT's main menu when it isn't styled by LXQT.
 * Added "What's This?" to Kvantum Manager.