@@ -3,6 +3,7 @@ V0.9.8
  * Consider QML anchoring, because of which, some widgets can't have frame expansion, tiling pattern or even interior gradient.
  * No interior and frame expansion when the label of a group box is drawn on its top frame.
  * Added support for expanded frame sizes.
+ * Remember theme specifications instead of getting theme repeatedly! This can save considerable CPU usage when a GUI is being updated quickly and continuously.
 
 V0.9.7
 ---------
